Finish import store module to main project.Now start develop toolbar and header algoritms

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -4,10 +4,14 @@
 @import "excel/excel";
 
 @import "~normalize.css";
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
+* {
+  font-family: 'Roboto', sans-serif;
+}
 
 body {
   background-color: #b3b1b1;
-  font-family: 'Roboto', sans-serif;
 }
 
 .main {
