--- a/public/scss/excel/header.scss
+++ b/public/scss/excel/header.scss
@@ -1,4 +1,8 @@
 .main-container__header {
   margin: 0;
   padding: 0;
+  outline: none;
+  border: none;
+  background: none;
+  font-size: 34px;
 }
