--- a/public/scss/excel/table.scss
+++ b/public/scss/excel/table.scss
@@ -26,7 +26,7 @@
 
   &__column-resize, &__row-resize {
     position: absolute;
-    z-index: 100;
+    z-index: 10000;
     background-color: blue;
     right: 0;
     opacity: 0;
@@ -79,6 +79,7 @@
     width: 102px;
     height: 100%;
     box-sizing: border-box;
+    font-size: 18px;
 
     &--selected {
       outline: 2px solid blue;
@@ -91,7 +92,7 @@
     width: 2px;
     background-color: blue;
     position: absolute;
-    z-index: 10;
+    z-index: 10000;
     top: 0;
     left: 0;
     display: none;
@@ -101,7 +102,7 @@
     height: 2px;
     background-color: blue;
     position: absolute;
-    z-index: 10;
+    z-index: 10000;
     top: 0;
     left: 0;
     display: none;
