--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -4,7 +4,7 @@
 @import "excel/excel";
 
 @import "~normalize.css";
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 * {
   font-family: 'Roboto', sans-serif;
