--- a/public/scss/excel/toolbar.scss
+++ b/public/scss/excel/toolbar.scss
@@ -30,3 +30,13 @@
     }
   }
 }
+
+.icons--active {
+  border-radius: 25px;
+  background-color: blue;
+  color: white;
+  &:hover {
+    background-color: #000;
+    border-radius: 25px;
+  }
+}
