started develop store algorithm

--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -2,6 +2,7 @@
 @import "variables";
 @import "Main page/main_page";
 @import "excel/excel";
+@import "loader";
 
 @import "~normalize.css";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
